move around folders and styling buttons

--- a/index.html
+++ b/index.html
@@ -337,9 +337,15 @@
               </div>
           </div>
         </div>
-        <a class="downloadLinks" target="_blank" href="https://simtk.org/frs/index.php?group_id=188">Access the installation package</a>
-        <a class="downloadLinks" target="_blank" href="https://simtk.org/frs/index.php?group_id=188">Download the example projects</a>
-                      <!-- </div><br>
+        <div class="row">
+          <div class="col-lg-6 col-12 downloadLinks">
+            <a role="button" target="_blank" href="https://simtk.org/frs/index.php?group_id=188" class="btn btn-outline-light">Access installation package</a>
+          </div>
+          <div class="col-lg-6 col-12 downloadLinks">
+            <a role="button" target="_blank" href="https://simtk.org/projects/sv_tests" class="btn btn-outline-light">Download example projects</a>
+          </div>
+        </div>
+        <!-- </div><br>
         <div>
               <h2><i class="iconInHeader fa-solid fa-laptop-code"></i>Developers</h2>
         </div>
@@ -411,7 +417,7 @@
     <div class="newSectionContent supportContainer" style="text-align: center;">
       <p class="supportDescription">Ask questions and interact with users on <a href="https://simtk.org/forums/viewforum.php?f=188" target="_blank">our public forum</a>.</p>
       <p class="supportDescription">View our <a target="_blank" href="https://github.com/SimVascular">GitHub repository</a> and suggest new features or report bugs.</p>
-      <p class="supportDescription">Send us an email at <a>simvascular@gmail.com</a></p>
+      <p class="supportDescription">Send us an email at <a href = "mailto: simvascular@gmail.com">simvascular@gmail.com</a>.</p>
     </div>
   </div>
 
@@ -593,12 +599,12 @@
   <div style="padding-bottom: 30px">
     <div class="newSectionHeader">
       <h1 id="team">Team</h1>
-      <p class="subText">
+      <!-- <p class="subText">
         <a style="font-size: 22px;" href="contributors.html" target="_blank">
           For complete list of contributors
           <i style="font-size: 18px;" class="fa-solid fa-arrow-up-right-from-square"></i>
         </a>
-      </p>
+      </p> -->
     </div>
     <div class="team-container">
       <div class="row">
@@ -700,12 +706,12 @@
   <div>
     <div class="newSectionHeader">
       <h1 id="acknowledgements">Acknowledgements</h1>
-      <p class="subText">
+      <!-- <p class="subText">
         <a style="font-size: 22px;" href="sponsors_info.html" target="_blank">
           For more details on sponsors
           <i style="font-size: 18px;" class="fa-solid fa-arrow-up-right-from-square"></i>
         </a>
-      </p>
+      </p> -->
     </div>
     <div class="newSectionContent">
       <div class="row creditsRow gx-5">
