attempt at animation

--- a/index.html
+++ b/index.html
@@ -435,57 +435,96 @@
               Pictures
             </h2>
           </div>
-        </div> -->
-        <div>
+        </div>
+        <div> -->
           <!-- Slideshow container -->
-          <div id="slideshow-container">
+          <div class="slideshow-container">
 
             <!-- Full images with numbers and message Info -->
-            <div class="slides">
+            <div class="slides picSlides">
               <img src="img/Img_Gallery_01.png" style="width:100%">
-              <div class="Info">BLOOD FLOW IN CABG SIMULATION</div>
+              <div class="caption">BLOOD FLOW IN CABG SIMULATION</div>
             </div>
 
-            <div class="slides">
+            <div class="slides picSlides">
               <img src="img/Img_Gallery_02.png" style="width:100%">
-              <div class="Info">BLOOD VELOCITY DISTRIBUTION IN CABG SIMULATION</div>
+              <div class="caption">BLOOD VELOCITY DISTRIBUTION IN CABG SIMULATION</div>
             </div>
 
-            <div class="slides">
+            <div class="slides picSlides">
               <img src="img/Img_Gallery_03.png" style="width:100%">
-              <div class="Info">BLOOD VELOCITY IN CORONARY ANEURISM</div>
+              <div class="caption">BLOOD VELOCITY IN CORONARY ANEURISM</div>
             </div>
-            <div class="slides">
+            <div class="slides picSlides">
               <img src="img/Img_Gallery_04.png" style="width:100%">
-              <div class="Info">HEMI-FONTAN CAVOPULMONARY CONNECTION</div>
+              <div class="caption">HEMI-FONTAN CAVOPULMONARY CONNECTION</div>
             </div>
             <!-- Back and forward buttons -->
-            <a class="back" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="forward" onclick="plusSlides(1)">&#10095;</a>
+            <a class="back" onclick="plusPicSlides(-1)">&#10094;</a>
+            <a class="forward" onclick="plusPicSlides(1)">&#10095;</a>
           </div>
             <!-- The circles/dots -->
             <div class="dotsContainer">
               <div style="margin:auto; width: fit-content;">
-                <span class="dots" onclick="currentSlide(0)"></span>
-                <span class="dots" onclick="currentSlide(1)"></span>
-                <span class="dots" onclick="currentSlide(2)"></span>
-                <span class="dots" onclick="currentSlide(3)"></span>
+                <span class="dots picDots" onclick="currentPicSlide(0)"></span>
+                <span class="dots picDots" onclick="currentPicSlide(1)"></span>
+                <span class="dots picDots" onclick="currentPicSlide(2)"></span>
+                <span class="dots picDots" onclick="currentPicSlide(3)"></span>
               </div>
           </div>
         </div>
-      <!-- </div>
-      <div class="col-sm-6 col-12">
+      </div>
+      <!-- <div class="col-sm-6 col-12">
         <div class="col-sm-6 col-12 headerForGalleryContainer">
           <div class="headerForGallery">
             <h2>
               <i class="fa-solid fa-video" style="padding-right: 20px"></i>
               Animations
             </h2>
+          </div> 
+        </div> -->
+        <!-- <div>
+          <div>
+            <div class="slideshow-container">
+
+              <div class="slides animeSlides">
+                <video loop="" id="div_video_html5_api" class="vjs-tech" preload="none" data-setup="{}" src="animation1.mp4">  
+          
+                  <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
+          
+                </video>
+                <div class="caption">BLOOD VELOCITY IN CORONARY ANEURISM</div>
+              </div>
+
+              <div class="slides animeSlides">
+                <img src="img/Img_Gallery_02.png" style="width:100%">
+                <div class="Info">BLOOD VELOCITY DISTRIBUTION IN CABG SIMULATION</div>
+              </div>
+
+              <div class="slides animeSlides">
+                <img src="img/Img_Gallery_03.png" style="width:100%">
+                <div class="Info">BLOOD VELOCITY IN CORONARY ANEURISM</div>
+              </div>
+              <div class="slides animeSlides">
+                <img src="img/Img_Gallery_04.png" style="width:100%">
+                <div class="Info">HEMI-FONTAN CAVOPULMONARY CONNECTION</div>
+              </div>
+              <a class="back" onclick="plusAnimeSlide(-1)">&#10094;</a>
+              <a class="forward" onclick="plusAnimeSlide(1)">&#10095;</a>
+            </div>
+              <div class="dotsContainer">
+                <div style="margin:auto; width: fit-content;">
+                  <span class="dots animeDots" onclick="currentAnimeSlide(0)"></span>
+                  <span class="dots animeDots" onclick="currentAnimeSlide(1)"></span>
+                  <span class="dots animeDots" onclick="currentAnimeSlide(2)"></span>
+                  <span class="dots animeDots" onclick="currentAnimeSlide(3)"></span>
+                </div>
+            </div>
           </div>
         </div>
-      </div> -->
+      </div>
     </div>
-  </div>
+  </div>-->
 
   <div>
     <div class="newSectionHeader">
