--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
   <section class="header">
   <div class="navBar" id="navBar">
-      <div>
+      <div id="naviconholder">
         <i class="fa-solid fa-bars" id="iconForSkip"></i>
       </div>
         <nav id="navElement">
