--- a/documentation/meshing.html
+++ b/documentation/meshing.html
@@ -59,7 +59,7 @@
             <img id="logo" class="headerLogoImage" src="../img/svLogoTitle.png" alt="SimVascular Logo"></img>
           </div>
           <!-- nav bar top right; same for all -->
-          <div class="headerNavBar">
+          <div id="headerNavBar">
             <details>
               <summary><i class="fa-solid fa-bars" id="iconForSkip"></i></summary>
               <div class="navBarSection">
