add indent in capabilities list

--- a/index.html
+++ b/index.html
@@ -160,19 +160,19 @@
               </li>
               <li>
                 <i class="fa-sharp fa-solid fa-check"></i>
-                Navier-Stokes equations with fixed arterial wall
-              </li>
-              <li>
-                <i class="fa-sharp fa-solid fa-check"></i>
                 FSI (Fluid-structure interaction)
               </li>
-              <li>
+              <li class="indented">
                 <i class="fa-sharp fa-solid fa-check"></i>
                 CMM (Coupled momentum method)
               </li>
-              <li>
+              <li class="indented">
                 <i class="fa-sharp fa-solid fa-check"></i>
                 ALE (Arbitrary Lagrangian Method)
+              </li>
+              <li>
+                <i class="fa-sharp fa-solid fa-check"></i>
+                Navier-Stokes equations with fixed arterial wall
               </li>
             </ul>
             <ul class="col-lg-6 col-12 p-5">
