--- a/index.html
+++ b/index.html
@@ -650,72 +650,84 @@
       <div class="col-md-4 col-6">
         <div class="team-item">
           <div class="team-triangle">
-            <div class="team-content" id="amarsden">
-              <img src="img/amarsden.jpeg" alt="Image of Alison Marsden">
-              <div class="team-hover text-center"  style="cursor:pointer">
-                <p style="font-size: 17px;">Alison Marsden</p>
+            <a href="https://profiles.stanford.edu/alison-marsden" target="_blank">
+              <div class="team-content">
+                <img src="img/amarsden.jpeg" alt="Image of Alison Marsden">
+                <div class="team-hover text-center"  style="cursor:pointer">
+                  <p style="font-size: 17px;">Alison Marsden</p>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
       <div class="col-md-4 col-6">
         <div class="team-item">
           <div class="team-triangle">
-            <div class="team-content" id="sshadden">
-              <img src="img/sshadden.jpeg" alt="Image of Shawn Shadden">
-              <div class="team-hover text-center"  style="cursor:pointer">
-                <p style="font-size: 17px;">Shawn Shadden</p>
+            <a href="https://me.berkeley.edu/people/shawn-shadden/" target="_blank">
+              <div class="team-content">
+                <img src="img/sshadden.jpeg" alt="Image of Shawn Shadden">
+                <div class="team-hover text-center"  style="cursor:pointer">
+                  <p style="font-size: 17px;">Shawn Shadden</p>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
       <div class="col-md-4 col-6">
         <div class="team-item">
           <div class="team-triangle">
-            <div class="team-content" id="dparker">
-              <img src="img/dparker.jpg" alt="Image of Dave Parker">
-              <div class="team-hover text-center" style="cursor:pointer">
-                <p style="font-size: 17px;">Dave Parker</p>
+            <a href="https://profiles.stanford.edu/david-parker" target="_blank">
+              <div class="team-content">
+                <img src="img/dparker.jpg" alt="Image of Dave Parker">
+                <div class="team-hover text-center" style="cursor:pointer">
+                  <p style="font-size: 17px;">Dave Parker</p>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
       <div class="col-md-4 col-6">
         <div class="team-item">
           <div class="team-triangle">
-            <div class="team-content" id="vvedula">
-              <img src="img/vvedula.jpg" alt="Image of Vijay Vedula">
-              <div class="team-hover text-center"  style="cursor:pointer">
-                <p style="font-size: 17px;">Vijay Vedula</p>
+            <a href="https://www.me.columbia.edu/faculty/vijay-vedula" target="_blank">
+              <div class="team-content">
+                <img src="img/vvedula.jpg" alt="Image of Vijay Vedula">
+                <div class="team-hover text-center"  style="cursor:pointer">
+                  <p style="font-size: 17px;">Vijay Vedula</p>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
       <div class="col-md-4 col-6">
         <div class="team-item">
           <div class="team-triangle">
-            <div class="team-content" id="mpfaller">
-              <img src="img/mpfaller.jpeg" alt="Image of Martin Pfaller">
-              <div class="team-hover text-center"  style="cursor:pointer">
-                <p style="font-size: 17px;">Martin Pfaller</p>
+            <a href="https://profiles.stanford.edu/martin-pfaller" target="_blank">
+              <div class="team-content">
+                <img src="img/mpfaller.jpeg" alt="Image of Martin Pfaller">
+                <div class="team-hover text-center"  style="cursor:pointer">
+                  <p style="font-size: 17px;">Martin Pfaller</p>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
       <div class="col-md-4 col-6">
         <div class="team-item">
           <div class="team-triangle">
-            <div class="team-content" id="lpegolotti">
-              <img src="img/lpegolotti.jpeg" alt="Image of Luca Pegolotti">
-              <div class="team-hover text-center"  style="cursor:pointer">
-                <p style="font-size: 17px;">Luca Pegolotti</p>
+            <a href="https://profiles.stanford.edu/luca-pegolotti" target="_blank">
+              <div class="team-content" id="lpegolotti">
+                <img src="img/lpegolotti.jpeg" alt="Image of Luca Pegolotti">
+                <div class="team-hover text-center"  style="cursor:pointer">
+                  <p style="font-size: 17px;">Luca Pegolotti</p>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
