fix math in simcardio

--- a/documentation/simcardio.html
+++ b/documentation/simcardio.html
@@ -209,7 +209,7 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md id="math" src="simcardio/_intro.md" no-shadow></zero-md>
+        <zero-md id="math" src="simcardio/intro/readme.md" no-shadow></zero-md>
       </span>
       <span id="automatic-cardiac-modeling">
         <zero-md src="simcardio/cardiacModeling/auto_cardiac_modeling/readme.md" no-shadow></zero-md>
