--- a/clinical/aortofemoral1.html
+++ b/clinical/aortofemoral1.html
@@ -54,87 +54,79 @@
   <body>
     <section class="header">
       <div class="topLeftLogo">  
-          <!-- logo top left -->
-          <div class="headerLogoContainer">
-            <img id="logo" class="headerLogoImage" src="../img/svLogoTitle.png" alt="SimVascular Logo"></img>
-          </div>
-          <!-- nav bar top right; same for all -->
-          <div id="headerNavBar">
-            <details>
-              <summary><i class="fa-solid fa-bars" id="iconForSkip"></i></summary>
-              <div class="navBarSection">
-                <details>
-                  <summary class="navTitle"><i class="iconInHeader fa-regular fa-user"></i>User Guides</summary>
-                  <div>
-                    <div class="navSubLink">
-                      <p href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</p>
-                    </div>
-                    <div class="navSubLink">
-                      <p href="../documentation/quickguide.html">Getting Started</p>
-                    </div>
-                    <div class="navSubLink">
-                      <p href="../documentation/modeling.html">Modeling Guide</p> 
-                    </div>
-                    <div class="navSubLink">
-                      <p href="../documentation/meshing.html">Meshing Guide</p> 
-                    </div>
-                    <div class="navSubLink">
-                      <p href="../documentation/flowsolver.html">Simulation Guide</p> 
-                    </div>
-                    <div class="navSubLink">
-                      <p href="../documentation/svfsi.html">svFSI Guide</p> 
-                    </div>
-                    <div class="navSubLink">
-                      <p href="../documentation/simcardio.html">SimCardio Guide</p> 
-                    </div>
-                    <div class="navSubLink">
-                      <p href="../documentation/rom_simulation.html">ROM Simulation Guide</p> 
-                    </div>
-                    <div class="navSubLink">
-                      <p href="../documentation/genbc.html">General B.C. Guide</p> 
-                    </div>
-                    <div class="navSubLink">
-                      <p href="../documentation/python_interface.html">Python Interface</p> 
-                    </div>
-                    <div class="navSubLink">
-                      <p href="../documentation/references.html">References</p> 
-                    </div>
-                    <div class="navSubLink">
-                      <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
-                    </div>
-                  </div>
-                </details>
-                <details>
-                  <summary class="navTitle"><i class="iconInHeader fa-solid fa-stethoscope" style="padding-right: 15px"></i>Clinical Cases</summary>
-                  <div>
-                    <div class="navSubLink">
-                      <p href="coronary.html">Coronary Normal</a>                  
-                    </div>
-                    <div class="navSubLink">
-                      <p href="aortofemoral1.html">Aortofemoral Normal - 1</a>                  
-                    </div>
-                    <div class="navSubLink">
-                      <p href="aortofemoral2.html">Aortofemoral Normal - 2</a>                  
-                    </div>
-                    <div class="navSubLink">
-                      <p href="pulmonary.html">Healthy Pulmonary</a>                  
-                    </div>
-                    <div class="navSubLink">
-                      <p href="https://simtk.org/projects/sv_tests">All Demo Projects</a>                  
-                    </div>
-                  </div>
-                </details>
-                <details>
-                  <summary class="navTitle"><i class="iconInHeader fa-solid fa-laptop-code" style="padding-right: 14px;"></i>Developer Guides</summary>
-                  <div>
-                    <div class="navSubLink">
-                      <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_developers">Compile Source Code</a>                  
-                    </div>
-                  </div>
-                </details>
-              </div>
-          </div>
+        <!-- logo top left -->
+        <div class="headerLogoContainer">
+          <img id="logo" class="headerLogoImage" src="../img/svLogoTitle.png" alt="SimVascular Logo"></img>
         </div>
+      </div>
+      <div class="topRightBars">
+        <div id="headerNavBar">
+          <details>
+            <summary><i class="fa-solid fa-bars" id="iconForSkip"></i></summary>
+            <div class="navBarSection">
+              <div class="navLink">
+                <p href="../index.html">
+                  <i class="iconInHeader fa-solid fa-house"></i>Home
+                </p>
+              </div>
+              <details>
+                <summary class="navTitle"><i class="iconInHeader fa-solid fa-user"></i>User Guides</summary>
+                <div>
+                  <div class="navSubLink">
+                    <p href="../documentation/quickguide.html">Getting Started</p>
+                  </div>
+                  <div class="navSubLink">
+                    <p href="../documentation/modeling.html">Modeling</p> 
+                  </div>
+                  <div class="navSubLink">
+                    <p href="../documentation/meshing.html">Meshing</p> 
+                  </div>
+                  <div class="navSubLink">
+                    <p href="../documentation/flowsolver.html">Simulation</p> 
+                  </div>
+                  <div class="navSubLink">
+                    <p href="../documentation/svfsi.html">svFSI</p> 
+                  </div>
+                  <div class="navSubLink">
+                    <p href="../documentation/simcardio.html">SimCardio</p> 
+                  </div>
+                  <div class="navSubLink">
+                    <p href="../documentation/rom_simulation.html">ROM Simulation</p> 
+                  </div>
+                  <div class="navSubLink">
+                    <p href="../documentation/genbc.html">General B.C.</p> 
+                  </div>
+                  <div class="navSubLink">
+                    <p href="../documentation/python_interface.html">Python Interface</p> 
+                  </div>
+                  <div class="navSubLink">
+                    <p href="../documentation/references.html">References</p> 
+                  </div>
+                </div>
+              </details>
+              <details>
+                <summary class="navTitle"><i class="iconInHeader fa-solid fa-stethoscope" style="padding-right: 15px"></i>Clinical Cases</summary>
+                <div>
+                  <div class="navSubLink">
+                    <p href="coronary.html">Coronary Normal</a>                  
+                  </div>
+                  <div class="navSubLink">
+                    <p href="aortofemoral1.html">Aortofemoral Normal - 1</a>                  
+                  </div>
+                  <div class="navSubLink">
+                    <p href="aortofemoral2.html">Aortofemoral Normal - 2</a>                  
+                  </div>
+                  <div class="navSubLink">
+                    <p href="pulmonary.html">Healthy Pulmonary</a>                  
+                  </div>
+                  <div class="navSubLink">
+                    <p href="https://simtk.org/projects/sv_tests">All Demo Projects</a>                  
+                  </div>
+                </div>
+              </details>
+            </div>
+        </div>
+      </div>
     </section>
 
   <section class="mainSection">
