margins and padding for VMR

--- a/index.html
+++ b/index.html
@@ -517,9 +517,9 @@
     <div class="newSectionHeader">
       <h1 id="repository">The Vascular Model Repository</h1>
     </div>
-    <div class="newSectionContent">
-      <div class="row" style="width: 100%; margin: auto;">
-      <span class="describeVMR col-md-6 col-12">
+    <div class="newSectionContent" style="margin-bottom: 35px">
+      <div class="row" style="width: 100%">
+      <span class="describeVMR col-lg-6 col-12">
         <div class="subHeader">
           <h2 style="margin: 15px 0">What it is</h2>
         </div>
@@ -528,10 +528,10 @@
           <h2 style="margin: 15px 0">Its purpose</h2>
         </div>
         <div>
-          <p style="text-align: justify;">These models can be used to simulate cardiovascular and pulmonary solid and fluid mechanics and will provide spatially and temporally-resolved benchmark solutions that can be used by academic, government and industry researchers to verify their computational methods. The SimVascular project provides an open source package for simulation to accompany the data provided in the model repository.</p>
+          <p style="text-align: justify; margin: 0">These models can be used to simulate cardiovascular and pulmonary solid and fluid mechanics and will provide spatially and temporally-resolved benchmark solutions that can be used by academic, government and industry researchers to verify their computational methods. The SimVascular project provides an open source package for simulation to accompany the data provided in the model repository.</p>
         </div>
       </span>
-      <span class="embedVMRcontainer col-md-6 col-12">
+      <span class="embedVMRcontainer col-lg-6 col-12">
         <embed id="embedVMR" type="text/html" src="https://www.vascularmodel.com/" width="100%" height="100%">
       </span>
     </div>
