edit html title and workshops section

--- a/clinical/pulmonary.html
+++ b/clinical/pulmonary.html
@@ -49,7 +49,7 @@
 
     <!-- browser tab labels -->
     <link rel="shortcut icon" type="image/jpg" href="../img/svIcon.png"></link>
-    <title>SimVascular</title>
+    <title>SimVascular Clinical Test Cases</title>
   </head>
   <body>
     <section class="header">
