--- a/documentation/modeling.html
+++ b/documentation/modeling.html
@@ -50,7 +50,7 @@
 
     <!-- browser tab labels -->
     <link rel="shortcut icon" type="image/jpg" href="../img/svIcon.png"></link>
-    <title>SimVascular</title>
+    <title>SimVascular Docs</title>
   </head>
   <body>
     <section class="header">
