--- a/index.html
+++ b/index.html
@@ -16,16 +16,30 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <!-- Style CSS -->
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/grayscale.css">
-    <link rel="stylesheet" href="css/standards.css">
-    <link rel="stylesheet" href="css/home.css">
+  <!-- Style CSS -->
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/grayscale.css">
+  <link rel="stylesheet" href="css/standards.css">
+  <link rel="stylesheet" href="css/home.css">
+  
+  <!-- browser tab labels -->
+  <link rel="shortcut icon" type="image/png" href="img/svIcon.png"></link>
+  <title>SimVascular</title>
 
+  <!-- Google Analytics Manager -->
+  <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-PQXFMVS01C"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-    <!-- browser tab labels -->
-    <link rel="shortcut icon" type="image/png" href="img/svIcon.png"></link>
-    <title>SimVascular</title>
+      gtag("config", "G-PQXFMVS01C");
+    </script>
   </head>
   <body>
   <section class="header">
@@ -82,9 +96,9 @@
                     <p class="skipItem">Socials</p>
                   </th>
                 </tr>
-                <tr class="skipTo workshops">
+                <tr class="skipTo news">
                   <th>
-                    <p class="skipItem">Workshops</p>
+                    <p class="skipItem">Recent News</p>
                   </th>
                 </tr>
                 <tr class="skipTo team">
@@ -596,30 +610,56 @@
 
   <div class="everyOtherSection">
     <div class="newSectionHeader">
-      <h1 id="workshops">Upcoming Workshops</h1>
+      <h1 id="news">Recent News</h1>
     </div>
     <div class="newSectionContent">
-    <!-- <p>UPCOMING WORKSHOPS</p> -->
-    <p class="subText">Learn more about SimVascular by attending one of our workshops:</p>
-    <!-- link online rn doesn't work -->
-    <div class="listingOfWorkshops">
-      <p class="date">
-        JUNE 23, 2022
-      </p>
-      <p class="workshopName">
-        <a href="">
-          SB3C POST-CONFERENCE COMPUTATIONAL WORKSHOP
+    <!-- <p class="subText">Learn more about SimVascular by attending one of our workshops:</p> -->
+    <div class="newNews">
+      <div class="row">
+        <div class="col-sm-6 col-12 news_label"><i class="iconInHeader fa-regular fa-calendar"></i>Event</div>
+        <div class="col-sm-6 col-12 news_date"><p>MAY 3 - 5, 2023</p></div>
+      </div>
+      <div class="news_name">
+        <a target="_blank" href="https://www.cmbbe-symposium.com/2023/workshops/">
+          Upcoming workshop at the CMBBE symposium
         </a>
-      </p>
-      <p class="date">
-        MAY 15, 2024
-      </p>
-      <p class="workshopName">
-        <a href="">
-          Another conference!
-        </a>
-      </p>
+      </div>
+      <div class="news_place">
+        Takes place in Paris, France
+      </div>
     </div>
+    <div class="newNews">
+      <div class="row">
+        <div class="col-sm-6 col-12 news_label"><i class="iconInHeader fa-regular fa-calendar"></i>Event</div>
+        <div class="col-sm-6 col-12 news_date"><p>JUNE 4 - 8, 2023</p></div>
+      </div>
+      <div class="news_name">
+        <a target="_blank" href="https://sb3c.org/program-at-a-glance/workshops/">
+          Upcoming workshop at SB<sup>3</sup>C
+        </a>
+      </div>
+      <div class="news_place">
+        Takes place in Vail, Colorado
+      </div>
+    </div>
+    <!-- <div class="listingOfWorkshops">
+      <p class="date">
+        MAY 3 - 5, 2023
+      </p>
+      <p class="workshopName">
+        <a target="_blank" href="https://www.cmbbe-symposium.com/2023/workshops/">
+          CMBBE SYMPOSIUM
+        </a>
+      </p>
+      <p class="date">
+        JUNE 4 - 8, 2023
+      </p>
+      <p class="workshopName">
+        <a target="_blank" href="https://sb3c.org/program-at-a-glance/workshops/">
+          SB<sup>3</sup>C
+        </a>
+      </p>
+    </div> -->
   </div> 
   </div>  
 
