add gtag and z-index for navbar

--- a/clinical/aortofemoral2.html
+++ b/clinical/aortofemoral2.html
@@ -50,6 +50,21 @@
     <!-- browser tab labels -->
     <link rel="shortcut icon" type="image/jpg" href="../../img/svIcon.png"></link>
     <title>SimVascular Clinical Test Cases</title>
+
+    <!-- Google Analytics Manager -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-PQXFMVS01C"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-PQXFMVS01C");
+  </script>
   </head>
   <body>
     <section class="header">
