--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
       </div>
       <div class="news_name">
         <a target="_blank" href="https://www.cmbbe-symposium.com/2023/workshops/">
-          Upcoming workshop at the CMBBE symposium
+          Workshop at the CMBBE symposium
         </a>
       </div>
       <div class="news_place">
@@ -635,7 +635,7 @@
       </div>
       <div class="news_name">
         <a target="_blank" href="https://sb3c.org/program-at-a-glance/workshops/">
-          Upcoming workshop at SB<sup>3</sup>C
+          Workshop at SB<sup>3</sup>C
         </a>
       </div>
       <div class="news_place">
