--- a/clinical/aortofemoral1.html
+++ b/clinical/aortofemoral1.html
@@ -47,10 +47,25 @@
       src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"
   ></script>
   
-      <!-- browser tab labels -->
-      <link rel="shortcut icon" type="image/jpg" href="../../img/svIcon.png"></link>
-      <title>SimVascular Clinical Test Cases</title>
-    </head>
+  <!-- browser tab labels -->
+  <link rel="shortcut icon" type="image/jpg" href="../../img/svIcon.png"></link>
+  <title>SimVascular Clinical Test Cases</title>
+
+  <!-- Google Analytics Manager -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-PQXFMVS01C"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-PQXFMVS01C");
+  </script>
+  </head>
   <body>
     <section class="header">
       <div class="topLeftLogo">  
