add active attribute in docs navbar

--- a/clinical/pulmonary.html
+++ b/clinical/pulmonary.html
@@ -131,7 +131,7 @@
                   <div class="navSubLink">
                     <p href="aortofemoral2.html">Aortofemoral Normal - 2</a>                  
                   </div>
-                  <div class="navSubLink">
+                  <div class="navSubLink active">
                     <p href="pulmonary.html">Healthy Pulmonary</a>                  
                   </div>
                   <div class="navSubLink">
