--- a/documentation/genbc.html
+++ b/documentation/genbc.html
@@ -108,7 +108,7 @@
                   <div class="navSubLink">
                     <p href="rom_simulation.html">ROM Simulation</p> 
                   </div>
-                  <div class="navSubLink">
+                  <div class="navSubLink active">
                     <p href="genbc.html">General B.C.</p> 
                   </div>
                   <div class="navSubLink">
