--- a/documentation/modeling.html
+++ b/documentation/modeling.html
@@ -92,7 +92,7 @@
                   <div class="navSubLink">
                     <p href="quickguide.html">Getting Started</p>
                   </div>
-                  <div class="navSubLink">
+                  <div class="navSubLink active">
                     <p href="modeling.html">Modeling</p> 
                   </div>
                   <div class="navSubLink">
