--- a/documentation/python_interface.html
+++ b/documentation/python_interface.html
@@ -111,7 +111,7 @@
                   <div class="navSubLink">
                     <p href="genbc.html">General B.C.</p> 
                   </div>
-                  <div class="navSubLink">
+                  <div class="navSubLink active">
                     <p href="python_interface.html">Python Interface</p> 
                   </div>
                   <div class="navSubLink">
