--- a/documentation/quickguide.html
+++ b/documentation/quickguide.html
@@ -75,7 +75,7 @@
               <details>
                 <summary class="navTitle"><i class="iconInHeader fa-solid fa-user"></i>User Guides</summary>
                 <div>
-                  <div class="navSubLink">
+                  <div class="navSubLink active">
                     <p href="quickguide.html">Getting Started</p>
                   </div>
                   <div class="navSubLink">
