--- a/documentation/references.html
+++ b/documentation/references.html
@@ -114,7 +114,7 @@
                   <div class="navSubLink">
                     <p href="python_interface.html">Python Interface</p> 
                   </div>
-                  <div class="navSubLink">
+                  <div class="navSubLink active">
                     <p href="references.html">References</p> 
                   </div>
                 </div>
