--- a/documentation/rom_simulation.html
+++ b/documentation/rom_simulation.html
@@ -105,7 +105,7 @@
                   <div class="navSubLink">
                     <p href="simcardio.html">SimCardio</p> 
                   </div>
-                  <div class="navSubLink">
+                  <div class="navSubLink active">
                     <p href="rom_simulation.html">ROM Simulation</p> 
                   </div>
                   <div class="navSubLink">
