--- a/documentation/simcardio.html
+++ b/documentation/simcardio.html
@@ -102,7 +102,7 @@
                   <div class="navSubLink">
                     <p href="svfsi.html">svFSI</p> 
                   </div>
-                  <div class="navSubLink">
+                  <div class="navSubLink active">
                     <p href="simcardio.html">SimCardio</p> 
                   </div>
                   <div class="navSubLink">
