--- a/documentation/svfsi.html
+++ b/documentation/svfsi.html
@@ -99,7 +99,7 @@
                   <div class="navSubLink">
                     <p href="flowsolver.html">Simulation</p> 
                   </div>
-                  <div class="navSubLink">
+                  <div class="navSubLink active">
                     <p href="svfsi.html">svFSI</p> 
                   </div>
                   <div class="navSubLink">
