--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
       <h1 id="repository">The Vascular Model Repository</h1>
     </div>
     <div class="newSectionContent" style="margin-bottom: 35px">
-      <div class="row" style="width: 100%">
+      <div class="row">
       <span class="describeVMR col-lg-6 col-12">
         <div class="subHeader">
           <h2 style="margin: 15px 0">What it is</h2>
