--- a/clinical/aortofemoral1.html
+++ b/clinical/aortofemoral1.html
@@ -125,7 +125,7 @@
                   <div class="navSubLink">
                     <p href="coronary.html">Coronary Normal</a>                  
                   </div>
-                  <div class="navSubLink">
+                  <div class="navSubLink active">
                     <p href="aortofemoral1.html">Aortofemoral Normal - 1</a>                  
                   </div>
                   <div class="navSubLink">
