--- a/clinical/aortofemoral2.html
+++ b/clinical/aortofemoral2.html
@@ -128,7 +128,7 @@
                   <div class="navSubLink">
                     <p href="aortofemoral1.html">Aortofemoral Normal - 1</a>                  
                   </div>
-                  <div class="navSubLink">
+                  <div class="navSubLink active">
                     <p href="aortofemoral2.html">Aortofemoral Normal - 2</a>                  
                   </div>
                   <div class="navSubLink">
