--- a/clinical/coronary.html
+++ b/clinical/coronary.html
@@ -122,7 +122,7 @@
               <details>
                 <summary class="navTitle"><i class="iconInHeader fa-solid fa-stethoscope" style="padding-right: 15px"></i>Clinical Cases</summary>
                 <div>
-                  <div class="navSubLink">
+                  <div class="navSubLink active">
                     <p href="coronary.html">Coronary Normal</a>                  
                   </div>
                   <div class="navSubLink">
