--- a/documentation/flowsolver.html
+++ b/documentation/flowsolver.html
@@ -96,7 +96,7 @@
                   <div class="navSubLink">
                     <p href="meshing.html">Meshing</p> 
                   </div>
-                  <div class="navSubLink">
+                  <div class="navSubLink active">
                     <p href="flowsolver.html">Simulation</p> 
                   </div>
                   <div class="navSubLink">
