--- a/documentation/meshing.html
+++ b/documentation/meshing.html
@@ -93,7 +93,7 @@
                   <div class="navSubLink">
                     <p href="modeling.html">Modeling</p> 
                   </div>
-                  <div class="navSubLink">
+                  <div class="navSubLink active">
                     <p href="meshing.html">Meshing</p> 
                   </div>
                   <div class="navSubLink">
