update some links and styling on navbar in docs

--- a/documentation/simcardio.html
+++ b/documentation/simcardio.html
@@ -29,6 +29,7 @@
         }
       }
     </script>
+
   
     
     <script>
@@ -68,13 +69,16 @@
   </head>
   <body>
     <section class="header">
-      <div class="topLeftLogo">  
+      <div class="row navRow">
+
+      
+      <div class="col-6 topLeftLogo">  
         <!-- logo top left -->
         <div class="headerLogoContainer">
           <img id="logo" class="headerLogoImage" src="../img/svLogoTitle.png" alt="SimVascular Logo"></img>
         </div>
       </div>
-      <div class="topRightBars">
+      <div class="col-6 topRightBars">
         <div id="headerNavBar">
           <details>
             <summary><i class="fa-solid fa-bars" id="iconForSkip"></i></summary>
@@ -141,7 +145,7 @@
               </details>
             </div>
         </div>
-      </div>
+      </div></div>
     </section>
 
   <section class="mainSection">
