fix some links and js code to help

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="newSectionHeader">
         <h1 id="capabilities">Its Capabilities</h1>
       </div>
-      <div class="newSectionContent">
+      <div class="newSectionContent removePadding">
         <p class="subText" style="padding-left: 12%; padding-right: 12%; font-size: 22px">
           Simvascular is the only fully open-source software package providing a complete pipeline 
           from medical image data segmentation to patient specific blood flow simulation 
@@ -612,7 +612,7 @@
     <div class="newSectionHeader">
       <h1 id="news">Recent News</h1>
     </div>
-    <div class="newSectionContent">
+    <div class="newSectionContent removePadding">
     <!-- <p class="subText">Learn more about SimVascular by attending one of our workshops:</p> -->
     <div class="newNews">
       <div class="row">
