keep skipToTop at bottom right

--- a/documentation/simcardio.html
+++ b/documentation/simcardio.html
@@ -340,8 +340,9 @@
       </span>
     </section>
   </section>
-  <section class="skipToTopSection">
-    <p id="skipToTop"><i class="fa-solid fa-arrow-up"></i></p>
+  <section id="skipToTopBackground">
+      <p id="skipToTop"><i class="fa-solid fa-arrow-up"></i></p>
+    </div>
   </section>
 
 
